--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -42,7 +42,7 @@
 {% block scripts %}
   <script>
 $(document).ready(function () {
-  var url = "{% url 'api_list' list.id %}";
+  var url = "{% url 'list-detail' list.id %}";
   window.Superlists.initialize(url);
 });
   </script>
