--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -23,7 +23,7 @@
           {% else %}
             <form class="navbar-form navbar-right"
                   method="POST"
-                  action="{% url 'send_login_email' %}">
+                  action="{% url 'login' %}">
               <span>Enter email to log in:</span>
               <input class="form-control" name="email" type="text" />
               {% csrf_token %}
