possible alternative version of chapter 5

--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -9,6 +9,9 @@
       {% csrf_token %}
     </form>
     <table id="id_list_table">
+      {% for item in items %}
+        <tr><td>{{ item.text }}</td></tr>
+      {% endfor %}
     </table>
   </body>
 </html>
