add bootstrap HEAD content. --ch08l010--

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -1,6 +1,11 @@
-<html>
+<!doctype html>
+<html lang="en">
+
   <head>
     <title>To-Do lists</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
   </head>
 
   <body>
