--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -11,9 +11,9 @@
   <body>
     <div class="container">
 
-      <div class="row justify-content-center">
+      <div class="row justify-content-center p-5 bg-body-tertiary rounded-3">
         <div class="col-lg-6 text-center">
-          <h1>{% block header_text %}{% endblock %}</h1>
+          <h1 class="display-1 mb-4">{% block header_text %}{% endblock %}</h1>
 
           <form method="POST" action="{% block form_action %}{% endblock %}" >
             <input
