--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -17,6 +17,7 @@
 
           <form method="POST" action="{% block form_action %}{% endblock %}" >
             <input
+              class="form-control form-control-lg"
               name="item_text"
               id="id_new_item"
               placeholder="Enter a to-do item"
