--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -5,7 +5,7 @@
     <title>To-Do lists</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
 
   <body>
