--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -16,12 +16,7 @@
           <h1 class="display-1 mb-4">{% block header_text %}{% endblock %}</h1>
 
           <form method="POST" action="{% block form_action %}{% endblock %}" >
-            <input
-              class="form-control form-control-lg {% if error %}is-invalid{% endif %}"
-              name="item_text"
-              id="id_new_item"
-              placeholder="Enter a to-do item"
-            />
+            {{ form.text }}
             {% csrf_token %}
             {% if error %}
               <div class="invalid-feedback">{{ error }}</div>
