add superlist.js to base.html --ch16l018--

--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -44,6 +44,11 @@
       </div>
 
     </div>
-  </body>
 
+    <script src="/static/lists.js"></script>
+    <script>
+      initialize("input#id_text", "div.invalid-feedback");
+    </script>
+
+  </body>
 </html>
