no need to pass errordiv in basehtml. --ch16024--

--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -47,7 +47,7 @@
 
     <script src="/static/lists.js"></script>
     <script>
-      initialize("input#id_text", "div.invalid-feedback");
+      initialize("input#id_text");
     </script>
 
   </body>
