switch to module in base html

--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -45,8 +45,8 @@
 
     </div>
 
-    <script src="/static/lists.js"></script>
-    <script>
+    <script type="module">
+      import {initialize} from "/static/lists.mjs";
       initialize("input#id_text");
     </script>
 
