Spiked inline js. --ch16l004--

--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -46,5 +46,13 @@
 
     </div>
 
+    <script>
+      const textInput = document.querySelector("#id_text");
+      textInput.oninput = () => {
+        const errorMsg = document.querySelector(".invalid-feedback");
+        errorMsg.style.display = "none";
+      }
+    </script>
+
   </body>
 </html>
