--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -44,6 +44,14 @@
       </div>
 
     </div>
+
+    <script>
+      const textInput = document.querySelector("#id_text");
+      textInput.oninput = () => {
+        const errorMsg = document.querySelector(".invalid-feedback");
+        errorMsg.style.display = "none";
+      }
+    </script>
   </body>
 
 </html>
