Include lists.js and call initialize() in base template. --ch16l028--

--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -46,12 +46,9 @@
 
     </div>
 
+    <script src="/static/lists.js"></script>
     <script>
-      const textInput = document.querySelector("#id_text");
-      textInput.oninput = () => {
-        const errorMsg = document.querySelector(".invalid-feedback");
-        errorMsg.style.display = "none";
-      }
+      initialize("#id_text", ".invalid-feedback");
     </script>
 
   </body>
