--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -48,7 +48,7 @@
 
     <script src="/static/lists.js"></script>
     <script>
-      initialize("#id_text", ".invalid-feedback");
+      initialize("#id_text");
     </script>
 
   </body>
