Remove error selector from base.html call. --ch16l033--

--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -47,7 +47,7 @@
 
     <script src="/static/lists.js"></script>
     <script>
-      initialize("#id_text", ".invalid-feedback");
+      initialize("#id_text");
     </script>
   </body>
 
