--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -47,7 +47,9 @@
 
     <script src="/static/lists.js"></script>
     <script>
-      initialize("#id_text");
+      window.onload = () => {
+        initialize("#id_text");
+      };
     </script>
   </body>
 
