--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -11,6 +11,18 @@
   <body>
     <div class="container">
 
+      <div class="navbar">
+        {% if user.is_authenticated %}
+          <p>Logged in as {{ user.email }}</p>
+          <p><a id="id_logout" href="/accounts/logout">Log out</a></p>
+        {% else %}
+          <form method="POST" action ="accounts/send_login_email">
+            Enter email to log in: <input name="email" type="text" />
+            {% csrf_token %}
+          </form>
+        {% endif %}
+      </div>
+
       <div class="row justify-content-center p-5 bg-body-tertiary rounded-3">
         <div class="col-lg-6 text-center">
           <h1 class="display-1 mb-4">{% block header_text %}{% endblock %}</h1>
