--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -16,10 +16,22 @@
           <h1 class="display-1 mb-4">{% block header_text %}{% endblock %}</h1>
 
           <form method="POST" action="{% block form_action %}{% endblock %}" >
-            {{ form.text }}
             {% csrf_token %}
+            <input
+              id="id_text"
+              name="text"
+              class="form-control
+                     form-control-lg
+                     {% if form.errors %}is-invalid{% endif %}"
+              placeholder="Enter a to-do item"
+              value="{{ form.text.value }}"
+              aria-describedby="id_text_feedback"
+              required
+            />
             {% if form.errors %}
-              <div class="invalid-feedback">{{ form.errors.text }}</div>
+              <div id="id_text_feedback" class="invalid-feedback">
+                {{ form.errors.text.0 }}
+              </div>
             {% endif %}
           </form>
         </div>
