--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -14,21 +14,27 @@
       <nav class="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Superlists</a>
-
-          <form method="POST" action="{% url 'send_login_email' %}">
-            <div class="input-group">
-              <label class="navbar-text me-2" for="id_email_input">
-                Enter your email to log in
-              </label>
-              <input
-                id="id_email_input"
-                name="email"
-                class="form-control"
-                placeholder="your@email.com"
-              />
-              {% csrf_token %}
-            </div>
-          </form>
+          {% if user.email %}
+            <ul>
+              <span class="navbar-text">Logged in as {{ user.email }}</span>
+              <a href="#TODO">Log out</a>
+            </ul>
+          {% else %}
+            <form method="POST" action="{% url 'send_login_email' %}">
+              <div class="input-group">
+                <label class="navbar-text me-2" for="id_email_input">
+                  Enter your email to log in
+                </label>
+                <input
+                  id="id_email_input"
+                  name="email"
+                  class="form-control"
+                  placeholder="your@email.com"
+                />
+                {% csrf_token %}
+              </div>
+            </form>
+          {% endif %}
         </div>
       </nav>
 
