--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -14,7 +14,8 @@
       <nav class="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Superlists</a>
-          <form method="POST" action="/accounts/send_login_email">
+
+          <form method="POST" action="{% url 'send_login_email' %}">
             <div class="input-group">
               <label class="navbar-text me-2" for="id_email_input">
                 Enter your email to log in
