--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Superlists</a>
           {% if user.email %}
-            <a href="#">My lists</a>
+            <a href="{% url 'my_lists' user.email %}">My lists</a>
             <ul>
               <span class="navbar-text">Logged in as {{ user.email }}</span>
               <a href="{% url 'logout' %}">Log out</a>
