--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -15,6 +15,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Superlists</a>
           {% if user.email %}
+            <a href="#">My lists</a>
             <span class="navbar-text">Logged in as {{ user.email }}</span>
             <form method="POST" action="{% url 'logout' %}">
               {% csrf_token %}
