add actual URL for my_lists to template --ch22l006--

--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Superlists</a>
           {% if user.email %}
-            <a href="#">My lists</a>
+            <a href="{% url 'my_lists' user.email %}">My lists</a>
             <span class="navbar-text">Logged in as {{ user.email }}</span>
             <form method="POST" action="{% url 'logout' %}">
               {% csrf_token %}
