do-nothing my lists link in navbar. --ch22l005--

--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -14,6 +14,7 @@
       <nav class="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Superlists</a>
+          <a href="#">My lists</a>
           {% if user.email %}
             <ul>
               <span class="navbar-text">Logged in as {{ user.email }}</span>
