--- a/src/lists/templates/base.html
+++ b/src/lists/templates/base.html
@@ -90,6 +90,12 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          {% block extra_content %}
+          {% endblock %}
+        </div>
+      </div>
     </div>
 
     <script src="/static/lists.js"></script>
