--- a/src/lists/templates/my_lists.html
+++ b/src/lists/templates/my_lists.html
@@ -5,9 +5,17 @@
 {% block list_form %}{% endblock %}
 
 {% block extra_content %}
+
   <h2>{{ owner.email }}'s lists</h2>
   <ul>
     {% for list in owner.list_set.all %}
+      <li><a href="{{ list.get_absolute_url }}">{{ list.name }}</a></li>
+    {% endfor %}
+  </ul>
+
+  <h2>Lists shared by other users</h2>
+  <ul>
+    {% for list in owner.shared_lists.all %}
       <li><a href="{{ list.get_absolute_url }}">{{ list.name }}</a></li>
     {% endfor %}
   </ul>
